--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
 		"axios": "^0.18.0",
 		"better-scroll": "^1.12.4",
 		"concurrently": "^3.6.0",
+		"create-keyframe-animation": "^0.1.0",
 		"fastclick": "^1.0.6",
+		"js-base64": "^2.4.8",
 		"jsonp": "^0.2.1",
+		"lodash": "^4.17.10",
+		"lyric-parser": "^1.0.1",
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.2",
 		"vue": "^2.5.2",
