--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"jsonp": "^0.2.1",
 		"lodash": "^4.17.10",
 		"lyric-parser": "^1.0.1",
+		"node-sass": "^4.9.3",
+		"sass-loader": "^7.1.0",
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.2",
 		"vue": "^2.5.2",
