--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"author": "Wyyx <gnehcyx@163.com>",
 	"private": true,
 	"scripts": {
-		"start": "yarn install && yarn run build && yarn run install-server",
+		"start": "yarn install --production=false && yarn run build && yarn run install-server",
 		"server-webpack": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
 		"build": "node build/build.js",
 		"clean": "rm -rf node_modules",
